@@ -1,4 +1,6 @@
 # Alpha Debian
+# Dual processor
+MAKEJOBFLAGS = "-j 2"
 TARGETOS = alpha-unknown-linux2.2
 HOSTOS   = alpha-unknown-linux2.2
 
